--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package = "com.example.ecomonitor">
 
     <application
         android:allowBackup="true"
@@ -13,24 +14,24 @@
         android:theme="@style/Theme.EcoMonitor"
         tools:targetApi="31">
         <activity
-            android:name=".Terrario"
+            android:name="com.example.ecomonitor.Terrario"
             android:exported="false" />
         <activity
-            android:name=".Register"
+            android:name="com.example.ecomonitor.Register"
             android:exported="false"
             android:label="@string/title_activity_register"
             android:launchMode="singleInstance"
             android:theme="@style/Theme.EcoMonitor" />
         <activity
-            android:name=".ecoSys"
+            android:name="com.example.ecomonitor.ecoSys"
             android:exported="false"
             android:launchMode="singleInstance" />
         <activity
-            android:name=".LoginActivity"
+            android:name="com.example.ecomonitor.LoginActivity"
             android:exported="false"
             android:launchMode="singleInstance" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.ecomonitor.MainActivity"
             android:exported="true"
             android:launchMode="singleInstance">
             <intent-filter>
