Last update,BIG

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
 
     <application
         android:allowBackup="true"
@@ -19,7 +21,12 @@
         <activity
             android:name=".HistoricoActivity"
             android:exported="false" />
-
+        <activity
+            android:name=".AirTempGraphicActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Pruebas"
+            android:exported="false" />
         <activity
             android:name=".TerrarioActivity"
             android:exported="false" />
@@ -47,6 +54,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+    </application>
 </manifest>
